spade-tests/src/snapshots/spade_tests__ast_lowering__supertrait_cycle_with_itself_is_rejected.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait A: A {}


error: Cycle caused by supertrait of `A`
  ┌─ testinput:1:7
  │
1 │ trait A: A {}
  │       ^
  │
note: ... which is a supertrait of `A`, completing the cycle
  ┌─ testinput:1:10
  │
1 │ trait A: A {}
  │          ^
  │
